# etno-xakaton

./: .gitignore  connect.sh  information.txt  test.py
backend/: pyproject.toml
backend/src/: cheboxary.py  db.py  kazan.py  main.py  nn.py  ola.py  prepare_db.py  sk.py
frontend/: .eslintignore  package-lock.json  package.json
frontend/public/: index.html
frontend/public/img/: Аида.jfif
frontend/src/: App.vue  main.js  router.js
frontend/src/components/: double_arrow.vue  member.vue  particle.vue  text_img.vue
frontend/src/components/arcticle_widgets/: arcticle_card_mobile.vue  arcticle_card_pc.vue  main_text.vue  text_img.vue
frontend/src/components/article_widgets/: arcticle_card_mobile.vue  arcticle_card_pc.vue  article_card.vue  article_card_pc_poca.vue  article_element_mobile.vue  loader.vue  main_text.vue  map.vue  phone_arcticle.vue
frontend/src/components/main_page/: about.vue  anounce.vue  carousel.vue  carousel_element.vue  carousel_pc.vue  team.vue
frontend/src/components/nav/: card-nav.vue  nav.vue
frontend/src/routes/: about.vue  city.vue  events.vue  main.vue  school.vue
